[EDELIVERY-15678] Fix failed Unit tests